@@ -1,5 +1,8 @@
 2006-05-06  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/unix/sysv/linux/check_pf.c (make_request): Make sure
+	that unused memory passed to sendto is nevertheless initialized.
+
 	[BZ #2499]
 	* resolv/nss_dns/dns-canon.c (_nss_dns_getcanonname_r): Avoid
 	possibly unaligned memory accesses.
